maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:47: error: ')' expected but 'if' found.
  if (y!=getMondeHauteur()-1 && !aMurNord(x,y+1)){
  ^